# s3-presigned-upload-tester

./: .gitignore  CNAME  README.md  config.example.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: test-providers.yml
data/: history.json  latest.json
scripts/: generate_simulated_data.py
site/: index.html
site/assets/: dashboard.js  style.css
src/: __init__.py  __main__.py  cli.py  config.py  models.py  multipart.py  retry.py  runner.py  s3_client.py  test_cases.py
src/reporters/: __init__.py  base.py  console.py  json_reporter.py
src/site_generator/: __init__.py  badges.py  build.py  history.py
tests/: __init__.py  test_cli.py  test_config.py  test_e2e.py  test_integration.py  test_models.py  test_multipart.py  test_retry.py  test_runner.py  test_s3_client.py  test_test_cases.py
tests/reporters/: test_console.py  test_json.py
tests/site_generator/: __init__.py  test_badges.py  test_build.py  test_history.py
